# diploma

./: .gitignore  README.md  analyze.ipynb  config.toml  dataset-selection.ipynb  info.md  main.py  predict.ipynb  pyproject.toml  results.csv  tokenizer.ipynb
data/: q&a.json  q&a_full.json
data/companies/: argo-team.txt  (+4 more)
evaluations/: i_10_hs_True_llm_gemini-1.5-pro_topk_3_cs_128_prep_SentenceSplitter.json  i_11_hs_True_llm_gemini-1.5-pro_topk_3_cs_256_prep_TokenTextSplitter.json  i_12_hs_True_llm_gemini-1.5-pro_topk_3_cs_256_prep_SentenceSplitter.json  i_13_hs_True_llm_gemini-1.5-pro_topk_5_cs_128_prep_TokenTextSplitter.json  i_14_hs_True_llm_gemini-1.5-pro_topk_5_cs_128_prep_SentenceSplitter.json  i_15_hs_True_llm_gemini-1.5-pro_topk_5_cs_256_prep_TokenTextSplitter.json  i_16_hs_True_llm_gemini-1.5-pro_topk_5_cs_256_prep_SentenceSplitter.json  i_17_hs_False_llm_llama-3.2-11B-vision-instruct_topk_3_cs_128_prep_TokenTextSplitter.json  i_18_hs_False_llm_llama-3.2-11B-vision-instruct_topk_3_cs_128_prep_SentenceSplitter.json  i_19_hs_False_llm_llama-3.2-11B-vision-instruct_topk_3_cs_256_prep_TokenTextSplitter.json  i_1_hs_True_llm_llama-3.2-11B-vision-instruct_topk_3_cs_128_prep_TokenTextSplitter.json  i_20_hs_False_llm_llama-3.2-11B-vision-instruct_topk_3_cs_256_prep_SentenceSplitter.json  i_21_hs_False_llm_llama-3.2-11B-vision-instruct_topk_5_cs_128_prep_TokenTextSplitter.json  i_22_hs_False_llm_llama-3.2-11B-vision-instruct_topk_5_cs_128_prep_SentenceSplitter.json  i_23_hs_False_llm_llama-3.2-11B-vision-instruct_topk_5_cs_256_prep_TokenTextSplitter.json  results.csv  (+17 more)
(+33 files in other folders)
